# dbofdb-pt

./: Cargo.toml  README.md
migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
migrations/2020-11-29-161019_test1/: up.sql
migrations/2020-12-06-110951_hypertable/: down.sql  up.sql
migrations/2020-12-06-112100_indexing_data/: up.sql
src/: data_form.rs  items.rs  lib.rs  main.rs  operation.rs  schema.rs  setting.rs
src/controllers/: main_table_controller.rs  mod.rs
src/models/: main_table.rs  mod.rs
