[package]
name = "dbofdb"
version = "0.1.0"
authors = ["Usairim Isani <usairim.isani@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib","rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"
chrono = "0.4"
diesel = { version = "1.4.4", features = ["postgres", "serde_json", "numeric", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"

[[bin]]
name = "dbo"
path = "src/main.rs"