[package]
name = "dbofdb"
version = "0.1.0"
authors = ["Usairim Isani <usairim.isani@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib","rlib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.34"

chrono = "0.4"

diesel = { version = "1.4.4", features = ["postgres", "serde_json", "numeric", "chrono"] }
diesel_migrations = "1.4.0"
dotenv = "0.15.0"

jsonschema = "0.4.0" # Only testing dynamic Schema generation

log = "0.4"

pretty_env_logger = "0.4"

schemars = "0.8.0" # For generating Schema from Rust Structs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.59"
tokio = { version = "0.2", features = ["full"] }

warp = "0.2.5"

[[bin]]
name = "dbo"
path = "src/main.rs"